@@ -4,6 +4,7 @@ and/or the pull requests.
 2013-07-02
 
 * Can ignore non-object arguments on a per-invocation basis.
+* Added constraint for any selector.
 
 
 2013-06-19
